--- a/lv2ttl/tuna.lv2.in
+++ b/lv2ttl/tuna.lv2.in
@@ -24,7 +24,7 @@
       lv2:InputPort ;
     lv2:index 2 ;
     lv2:symbol "tuning" ;
-    lv2:name "Tuning A440"
+    lv2:name "Tuning A440" ;
     lv2:default 440.0 ;
     lv2:minimum 220.0 ;
     lv2:maximum 880.0;
