debugging and tweaking for low-freq response

--- a/lv2ttl/tuna.lv2.in
+++ b/lv2ttl/tuna.lv2.in
@@ -86,6 +86,7 @@
     lv2:maximum 12.0;
 		units:unit units:semitone12TET;
     lv2:portProperty lv2:integer;
+    lv2:portProperty lv2:enumeration;
     lv2:scalePoint [ rdfs:label "C";  rdf:value  0.0 ; ] ;
     lv2:scalePoint [ rdfs:label "C#"; rdf:value  1.0 ; ] ;
     lv2:scalePoint [ rdfs:label "D";  rdf:value  2.0 ; ] ;
@@ -106,7 +107,7 @@
     lv2:name "Cent F/Fc" ;
     lv2:minimum -50.0;
     lv2:maximum 50.0;
-    lv2:scalePoint [ rdfs:label "accurate"; rdf:value 0.0 ; ] ;
+    lv2:scalePoint [ rdfs:label "+-0"; rdf:value 0.0 ; ] ;
     lv2:scalePoint [ rdfs:label "-1/4 semitone"; rdf:value -25 ; ] ;
     lv2:scalePoint [ rdfs:label "+1/4 semitone"; rdf:value 25 ; ] ;
   ] , [
