--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -120,5 +120,14 @@
     lv2:minimum -100.0;
     lv2:maximum 100.0;
     lv2:scalePoint [ rdfs:label "accurate"; rdf:value 0.0 ; ] ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:OutputPort ;
+    lv2:index 10 ;
+    lv2:symbol "strobetoui" ;
+    lv2:name "StrobeToUi" ;
+    lv2:minimum 0.0;
+    lv2:maximum 100.0;
+		lv2:portProperty pprop:notOnGUI ;
   ]
   .
