--- a/lv2ttl/manifest.lv2.ttl.in
+++ b/lv2ttl/manifest.lv2.ttl.in
@@ -1,5 +1,5 @@
 
-@LV2NAME@:one@URI_SUFFIX@
+@LV2NAME@:@INSTANCE@@URI_SUFFIX@
 	a lv2:Plugin ;
 	lv2:binary <@LV2NAME@@LIB_EXT@>  ;
 	rdfs:seeAlso <@LV2NAME@.ttl> .
