--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -1,6 +1,6 @@
 
 
-@LV2NAME@:one@URI_SUFFIX@
+@LV2NAME@:@INSTANCE@@URI_SUFFIX@
   a lv2:Plugin, doap:Project, lv2:AnalyserPlugin;
   doap:license <http://usefulinc.com/doap/licenses/gpl> ;
   doap:maintainer <http://gareus.org/rgareus#me> ;
