--- a/lv2ttl/manifest.ttl.in
+++ b/lv2ttl/manifest.ttl.in
@@ -4,8 +4,8 @@
 @prefix kx:    <http://kxstudio.sf.net/ns/lv2ext/external-ui#> .
 @prefix @LV2NAME@: <http://gareus.org/oss/lv2/@LV2NAME@#> .
 
-@LV2NAME@:midi
-	a lv2:Plugin ;
-	lv2:binary <@LV2NAME@@LIB_EXT@>  ;
-	rdfs:seeAlso <@LV2NAME@.ttl> .
+#@LV2NAME@:midi
+#	a lv2:Plugin ;
+#	lv2:binary <@LV2NAME@@LIB_EXT@>  ;
+#	rdfs:seeAlso <@LV2NAME@.ttl> .
 
