--- a/lv2ttl/tuna.ttl.in
+++ b/lv2ttl/tuna.ttl.in
@@ -8,6 +8,7 @@
 @prefix urid:  <http://lv2plug.in/ns/ext/urid#> .
 @prefix pprop: <http://lv2plug.in/ns/ext/port-props#> .
 @prefix rdf:   <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix rsz:   <http://lv2plug.in/ns/ext/resize-port#> .
 @prefix kx:    <http://kxstudio.sf.net/ns/lv2ext/external-ui#> .
 @prefix @LV2NAME@: <http://gareus.org/oss/lv2/@LV2NAME@#> .
 
