--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -17,7 +17,7 @@
     lv2:index 0 ;
     lv2:symbol "control" ;
     lv2:name "Control" ;
-    rdfs:comment "GUI to plugin communication"
+    rdfs:comment "GUI to plugin communication" ;
   ] , [
     a atom:AtomPort ,
       lv2:OutputPort ;
@@ -28,7 +28,7 @@
     lv2:name "Notify" ;
     # 2 * 512 * sizeof(float) + LV2-Atoms
     rsz:minimumSize 4352;
-    rdfs:comment "Plugin to GUI communication"
+    rdfs:comment "Plugin to GUI communication" ;
   ] , [
     a lv2:AudioPort ,
       lv2:InputPort ;
@@ -151,5 +151,5 @@
     lv2:maximum 100.0;
     lv2:portProperty pprop:notOnGUI ;
   ]
-	rdfs:comment "Musical instrument tuner with strobe characteristics"
+	rdfs:comment "Musical instrument tuner with strobe characteristics" ;
   .
