do the semicolon

--- a/lv2ttl/tuna.gui.ttl.in
+++ b/lv2ttl/tuna.gui.ttl.in
@@ -6,10 +6,10 @@
   ui:portNotification [
     ui:plugin @LV2NAME@:one ;
     lv2:symbol "notify" ;
-    ui:notifyType atom:Blank
+    ui:notifyType atom:Blank ;
   ] , [
     ui:plugin @LV2NAME@:fft ;
     lv2:symbol "notify" ;
-    ui:notifyType atom:Blank
+    ui:notifyType atom:Blank ;
   ]
   .
