--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -150,6 +150,76 @@
     lv2:minimum 0.0;
     lv2:maximum 100.0;
     lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 13 ;
+    lv2:symbol "thresholdRMS" ;
+    lv2:name "thresholdRMS" ;
+    lv2:minimum -100.0;
+    lv2:maximum 0.0;
+    lv2:default -65.0 ;
+    lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 14 ;
+    lv2:symbol "thresholdPostFilter" ;
+    lv2:name "thresholdPostFilter" ;
+    lv2:minimum -50.0;
+    lv2:maximum 0.0;
+    lv2:default -35.0 ;
+    lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 15 ;
+    lv2:symbol "thresholdFFT" ;
+    lv2:name "thresholdFFT" ;
+    lv2:minimum -50.0;
+    lv2:maximum 10.0;
+    lv2:default -35.0 ;
+    lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 16 ;
+    lv2:symbol "thresholdOverride" ;
+    lv2:name "thresholdOverride" ;
+    lv2:minimum 0.0;
+    lv2:maximum 40.0;
+    lv2:default 20.0 ;
+    lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 17 ;
+    lv2:symbol "thresholdFundamental" ;
+    lv2:name "thresholdFundamental" ;
+    lv2:minimum 0.0;
+    lv2:maximum 60.0;
+    lv2:default 13.0 ;
+    lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 18 ;
+    lv2:symbol "thresholdOctave" ;
+    lv2:name "thresholdOctave" ;
+    lv2:minimum -100.0;
+    lv2:maximum 0.0;
+    lv2:default -40.0 ;
+    lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 19 ;
+    lv2:symbol "thresholdOvertones" ;
+    lv2:name "thresholdvertones" ;
+    lv2:minimum -100.0;
+    lv2:maximum 0.0;
+    lv2:default -25.0 ;
+    lv2:portProperty pprop:notOnGUI ;
   ] ;
 	rdfs:comment "Musical instrument tuner with strobe characteristics" ;
   .
