--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -108,7 +108,7 @@
     lv2:maximum 12.0;
     units:unit units:semitone12TET;
     lv2:portProperty lv2:integer;
-    lv2:portProperty lv2:enumeration;
+    lv2:portProperty lv2:enumeration, lv2:integer;
     lv2:scalePoint [ rdfs:label "C";  rdf:value  0.0 ; ] ;
     lv2:scalePoint [ rdfs:label "C#"; rdf:value  1.0 ; ] ;
     lv2:scalePoint [ rdfs:label "D";  rdf:value  2.0 ; ] ;
