--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 .gitignore export-ignore
 .gitattributes export-ignore
+.gitmodules export-ignore
+/Makefile.git export-ignore
+/img/tuna*.png export-ignore
+/img/*.icns export-ignore
+/img/*.ico export-ignore
+/static_fft.sh export-ignore
