--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -6,9 +6,10 @@
   doap:maintainer <http://gareus.org/rgareus#me> ;
   doap:name "Instrument Tuner@NAME_SUFFIX@";
   @VERSION@
+	@UITTL@
   lv2:optionalFeature lv2:hardRTCapable ;
   lv2:requiredFeature urid:map ;
-  ui:ui @LV2NAME@:@UI@ ;
+	@SIGNATURE@
   lv2:port
   [
     a atom:AtomPort ,
