Add meta-data for inline-display

--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -9,7 +9,8 @@
   @UITTL@
   @MODBRAND@
   @MODLABEL@
-  lv2:optionalFeature lv2:hardRTCapable ;
+  lv2:optionalFeature lv2:hardRTCapable, idpy:queue_draw ;
+	lv2:extensionData idpy:interface ;
   lv2:requiredFeature urid:map ;
   @SIGNATURE@
   lv2:port
