--- a/lv2ttl/tuna.lv2.ttl.in
+++ b/lv2ttl/tuna.lv2.ttl.in
@@ -225,6 +225,26 @@
     lv2:maximum 0.0;
     lv2:default -15.0 ;
     lv2:portProperty pprop:notOnGUI ;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 20 ;
+    lv2:symbol "port" ;
+    lv2:name "Port" ;
+    lv2:default 8080 ;
+    lv2:minimum 1024 ;
+    lv2:maximum 65535 ;
+    lv2:portProperty lv2:integer;
+  ] , [
+    a lv2:ControlPort ,
+      lv2:InputPort ;
+    lv2:index 21 ;
+    lv2:symbol "web_server" ;
+    lv2:name "Web Server" ;
+    lv2:default 0 ;
+    lv2:minimum 0 ;
+    lv2:maximum 1 ;
+    lv2:portProperty lv2:integer, lv2:toggled ;
   ] ;
   rdfs:comment "Musical instrument tuner with strobe characteristics" ;
   .
